--- a/matbench/examples/predicting_expt_gap.ipynb
+++ b/matbench/examples/predicting_expt_gap.ipynb
@@ -9990,9 +9990,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -10004,7 +10004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
